# hexcrypt

./: Cargo.toml  README.md  doc.sh
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/hexcrypt/: all.html  fn.main.html  index.html  sidebar-items.js  struct.Args.html
docs/hexcrypt/decrypt/: fn.decrypt.html  index.html
docs/hexcrypt/encrypt/: fn.encrypt.html  fn.parse_size.html  index.html  sidebar-items.js
docs/hexcrypt/error/: enum.HexCryptError.html  index.html  sidebar-items.js  type.HexCryptResult.html
docs/implementors/clap_builder/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js
docs/implementors/core/convert/: trait.From.js
docs/implementors/core/error/: trait.Error.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/src/hexcrypt/: decrypt.rs.html  encrypt.rs.html  error.rs.html  main.rs.html
src/: decrypt.rs  encrypt.rs  error.rs  main.rs
